clap_derive/tests/ui/skip_with_other_options.stderr
error: methods are not allowed for skipped fields
 --> $DIR/skip_with_other_options.rs:8:12
  |
8 |     #[clap(skip, long)]
  |            ^^^^
